# tetris

./: CMakeLists.txt  README.md  build.sh  main.cpp
basicfuncs/: CMakeLists.txt  common.cpp  common.h  coordinate.h  keyboard.cpp  keyboard.h  map.cpp  map.h
games/: CMakeLists.txt  adaptmap.cpp  adaptmap.h  tetris.cpp  tetris.h  tetrisblock.cpp  tetrisblock.h
